# watchfs

./: .gitignore  CMakeLists.txt  README.rst
batches/yuneta_docs/: _deploy_01_yuneta_docs.json  _update-binaries.json  _update-configs.json  watchfs.yuneta_docs_api.json  watchfs.yuneta_docs_downloads.json  watchfs.yuneta_docs_installation.json  watchfs.yuneta_docs_overview.json  watchfs.yuneta_docs_tutorials.json  watchfs.yuneta_docs_web.json
src/: c_watchfs.c  c_watchfs.h  main.c  yuno_watchfs.c  yuno_watchfs.h
